--- a/html/solutions.html
+++ b/html/solutions.html
@@ -1,1 +1,5 @@
-Solutions
+Organize the world's information in a way which makes it more immediately accessible to everyone in a cozy environment. Having breadth of knowledge in one place is a completely different experience from running everywhere online in order to get it.
+
+Use curatorial guidance to provide the most useful information by pruning queries or datasets in a way which still preserves overall completeness. For example, people will not miss records of museum objects with no media or any records where media quality is underserved due to copyright policies.
+
+Skirt the gray area with grace for preservational progress. A lot of the commercial world takes itself to the grave even after its days of publication, although some change is already happening. Commercial preservation that we have never had the opportunity to keep record of until now without overburden of bandwidth consumption is magazines. <a href="https://retromags.com/" target="_blank">Retromags</a> is an organization which preserves old magazines, and very few companies have asked them to kindly not handle their publications.
