--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div class="nebulabackground"></div>
 <div class="contentbody">
         <div class="contents">
-                <div class="headerbar"><span class="orbitron">Internet Public Library</span> :: Documentation</div>
+                <div class="headerbar"><span class="orbitron">Internet Public Library</span>&nbsp;:: Documentation</div>
         </div>
         <div class="flexrowplain" style="height:100%;">
                 <div class="tocbox flexcolumn">
