--- a/html/solutions.html
+++ b/html/solutions.html
@@ -8,7 +8,7 @@
 <div class="m24">In the case where data is structured under a framework such as Mediawiki, it follows the framework's indexing while building a user-interface which does its best to bring out what the framework offers. In the case of Mediawiki datasets, a Table of Contents is created as a user-interface for accessing all of any single wiki's pages. This is something that naturally cannot happen in any live wikipedia page whether it be wikipedia itself or fandom.com pages, so the library serves to take already established data sets and repurpose them to be more readable.</div>
 
 <div class="orbitron">Use curatorial guidance to provide the most useful information</div>
-<div class="m24"> by pruning queries or datasets in a way which still preserves overall completeness. For example, people will not miss records of museum objects with no media or any records where media quality is underserved due to copyright policies.</div>
+<div class="m24">By pruning queries or datasets in a way which still preserves overall completeness, datasets at the library avoid the meta-data-only problem. For example, people will not miss records of museum objects with no media or any records where media quality is underserved due to copyright policies.</div>
 
 <div class="orbitron">
         Skirt the gray area with grace for preservational progress.
