--- a/html/solutions.html
+++ b/html/solutions.html
@@ -1,14 +1,17 @@
 <div class="orbitron">Organize the world's information in a way which makes it more immediately accessible to everyone in a cozy environment.</div>
 <div class="m24"> Having breadth of knowledge in one place is a completely different experience from running everywhere online in order to get it. Specific dataset implementations are different from modern content aggregation where data is random and sources are not resolved. It gives the researcher the ability to know more about what is being examined.</div>
 
-<div class="m24">Presenting data in a way which makes it easier to access all of any single corpus. Unique datasets such as Metropolitan Museum of Art, The Smithsonian, or MIT OCW each have their own uniquely indexed databases so that the user-interfaces for each implementation can be made to fully guide the data to the researcher. </div>
+<div class="orbitron">
+        Presenting data in a way which makes it easier to access all of any single corpus.
+</div>
+<div class="m24"> Unique datasets such as Metropolitan Museum of Art, The Smithsonian, or MIT OCW each have their own uniquely indexed databases so that the user-interfaces for each implementation can be made to fully guide the researcher to the desired data. The sources are not the best at organizing their own data for practical referential use, so being able to do so by repurposing institutional data or from any source for that matter is something we should consider as a necessity in our responsibilities as technological stewards.</div>
 
 
 
 <div class="m24">In the case where data is structured under a framework such as Mediawiki, it follows the framework's indexing while building a user-interface which does its best to bring out what the framework offers. In the case of Mediawiki datasets, a Table of Contents is created as a user-interface for accessing all of any single wiki's pages. This is something that naturally cannot happen in any live wikipedia page whether it be wikipedia itself or fandom.com pages, so the library serves to take already established data sets and repurpose them to be more readable.</div>
 
 <div class="orbitron">Use curatorial guidance to provide the most useful information</div>
-<div class="m24">By pruning queries or datasets in a way which still preserves overall completeness, datasets at the library avoid the meta-data-only problem. For example, people will not miss records of museum objects with no media or any records where media quality is underserved due to copyright policies.</div>
+<div class="m24">By pruning queries or data in a way which still preserves overall completeness, datasets at the library avoid the meta-data-only problem. For example, people will not miss records of museum objects with no media or any records where media quality is underserved due to copyright policies.</div>
 
 <div class="orbitron">
         Skirt the gray area with grace for preservational progress.
