--- a/html/solutions.html
+++ b/html/solutions.html
@@ -7,7 +7,9 @@
 <div class="m24"> Unique datasets such as Metropolitan Museum of Art, The Smithsonian, or MIT OCW each have their own uniquely indexed databases so that the user-interfaces for each implementation can be made to fully guide the researcher to the desired data. The sources are not the best at organizing their own data for practical referential use, so being able to do so by repurposing institutional data or from any source for that matter is something we should consider as a necessity in our responsibilities as technological stewards.</div>
 
 
-
+<div class="orbitron">
+        Presenting data from establish structures with greater efficacy.
+</div>
 <div class="m24">In the case where data is structured under a framework such as Mediawiki, it follows the framework's indexing while building a user-interface which does its best to bring out what the framework offers. In the case of Mediawiki datasets, a Table of Contents is created as a user-interface for accessing all of any single wiki's pages. This is something that naturally cannot happen in any live wikipedia page whether it be wikipedia itself or fandom.com pages, so the library serves to take already established data sets and repurpose them to be more readable.</div>
 
 <div class="orbitron">Use curatorial guidance to provide the most useful information</div>
