--- a/html/solutions.html
+++ b/html/solutions.html
@@ -8,7 +8,7 @@
 
 
 <div class="orbitron">
-        Presenting data from establish structures with greater efficacy.
+        Presenting data from established structures with greater efficacy.
 </div>
 <div class="m24">In the case where data is structured under a framework such as Mediawiki, it follows the framework's indexing while building a user-interface which does its best to bring out what the framework offers. In the case of Mediawiki datasets, a Table of Contents is created as a user-interface for accessing all of any single wiki's pages. This is something that naturally cannot happen in any live wikipedia page whether it be wikipedia itself or fandom.com pages, so the library serves to take already established data sets and repurpose them to be more readable.</div>
 
