--- a/html/solutions.html
+++ b/html/solutions.html
@@ -19,3 +19,10 @@
         Skirt the gray area with grace for preservational progress.
 </div>
 <div class="m24"> A lot of the commercial world takes itself to the grave even after its days of publication, although some change is already happening. Commercial preservation that we have never had the opportunity to keep record of until now without overburden of bandwidth consumption is magazines. <a href="https://retromags.com/" target="_blank">Retromags</a> is an organization which preserves old magazines, and very few companies have asked them to not be in possession of their publications. Not just traditional media, but also digital media from the commercial world can benefit from preservational efforts since they are usually what inspires people to become creators in the modern world.</div>
+
+<div class="orbitron">
+        Free for everybody, for real.
+</div>
+<div class="m24">
+        The one way to handle this project is to make it free for everybody, no matter what. There are no added benefits to having an account system, so there will be none. This makes the visit even less restrictive than a physical library, where one needs a card for access. Nothing is needed for access. There are no commercial aspects to the site such as advertisements or sponsorship plugs which cut away from the coziness of the design, and if we can get away with not having donation reminders like Wikipedia, that will be an omission as well.
+</div>
