--- a/html/solutions.html
+++ b/html/solutions.html
@@ -1,10 +1,15 @@
+<div class="orbitron">Not Always A Problem</div>
+<div class="m24">Development of the library doesn't need to always solve a problem. Sometimes all it takes is to develop things that make little improvements which quietly become a standard. The library is developed in this way while also functioning to solve any problems that it can in the process of collecting, preserving, and presenting data for reference and research.</div>
+
 <div class="orbitron">Organize the world's information in a way which makes it more immediately accessible to everyone in a cozy environment.</div>
 <div class="m24"> Having breadth of knowledge in one place is a completely different experience from running everywhere online in order to get it. Specific dataset implementations are different from modern content aggregation where data is random and sources are not resolved. It gives the researcher the ability to know more about what is being examined.</div>
 
 <div class="orbitron">
-        Presenting data in a way which makes it easier to access all of any single corpus.
+        Presenting data in a way which makes it easier to access all of any corpus.
 </div>
-<div class="m24"> Unique datasets such as Metropolitan Museum of Art, The Smithsonian, or MIT OCW each have their own uniquely indexed databases so that the user-interfaces for each implementation can be made to fully guide the researcher to the desired data. The sources are not the best at organizing their own data for practical referential use, so being able to do so by repurposing institutional data or from any source for that matter is something we should consider as a necessity in our responsibilities as technological stewards.</div>
+<div class="m24 flexcolumn"> 
+        Unique datasets such as Metropolitan Museum of Art or The Smithsonian each have their own uniquely indexed databases so that the user-interfaces for each implementation can be made to guide the researcher to the desired data while also providing more fluidity for presentation of query results.
+</div>
 
 
 <div class="orbitron">
