--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <div class="tocbox flexcolumn">
                         <a href="javascript:void(0)" class="nounderline" data="briefing">Briefing</a>
                         <a href="javascript:void(0)" class="nounderline" data="solutions">Solutions</a>
+                        <a href="javascript:void(0)" class="nounderline" data="collection">Collection</a>
                         <a href="javascript:void(0)" class="nounderline" data="creator">Creator</a>
                 </div>
                 <div class="flexcolumn" id="contentdata" style="flex:1;  padding:8px;">
