--- a/html/solutions.html
+++ b/html/solutions.html
@@ -1,19 +1,18 @@
-<div class="orbitron">Not Always A Problem</div>
-<div class="m24">Development of the library doesn't need to always solve a problem. Sometimes all it takes is to develop things that make little improvements which quietly become a standard. The library is developed in this way while also functioning to solve any problems that it can in the process of collecting, preserving, and presenting data for reference and research.</div>
+<div class="orbitron">Quiet solutions and problems.</div>
+<div class="m24">Sometimes all it takes is to develop things that make little improvements which quietly become a standard. The library is developed in this way while also functioning to solve any problems that it can in the process of collecting, preserving, and presenting data for reference and research. A Quiet solution is more what the library tends to offer, because doing something differently doesn't necessarily solve a problem. It more accurately generates another solution.</div>
 
 <div class="orbitron">Organize the world's information in a way which makes it more immediately accessible to everyone in a cozy environment.</div>
-<div class="m24"> Having breadth of knowledge in one place is a completely different experience from running everywhere online in order to get it. Specific dataset implementations are different from modern content aggregation where data is random and sources are not resolved. It gives the researcher the ability to know more about what is being examined.</div>
+<div class="m24"> Researchers know more about what is being examined when data is served in meaningful, abundant collections. Having breadth of knowledge in one place differs from going everywhere online in order to get it. It creates a grander sense of focus even when dealing with vast information. When datasets are respecting context and references, it naturally creates a stronger environment for learning. The more data that the library obtains and presents, the more it gets past the problem of people getting data from random sources such as the results achieved from Pinterest browsing.</div>
 
 <div class="orbitron">
         Presenting data in a way which makes it easier to access all of any corpus.
 </div>
 <div class="m24 flexcolumn"> 
-        Unique datasets such as Metropolitan Museum of Art or The Smithsonian each have their own uniquely indexed databases so that the user-interfaces for each implementation can be made to guide the researcher to the desired data while also providing more fluidity for presentation of query results.
+        Datasets such as Metropolitan Museum of Art or The Smithsonian each have their own uniquely indexed databases so that the user-interfaces for each implementation can be made to guide the researcher to the desired data while also providing more fluidity for presentation of query results. The page layouts for data results are mapped out in such a way that the most information that can be provided at once is presented, which makes any single query substantial. Since the site is visually stylized with lots of graphical compositions from css, the html feeds on the abundance of data and images in order to draw itself on the screen.
 </div>
 
-
 <div class="orbitron">
-        Presenting data from established structures with greater efficacy.
+        Presenting data from established structures differently.
 </div>
 <div class="m24">In the case where data is structured under a framework such as Mediawiki, it follows the framework's indexing while building a user-interface which does its best to bring out what the framework offers. In the case of Mediawiki datasets, a Table of Contents is created as a user-interface for accessing all of any single wiki's pages. This is something that naturally cannot happen in any live wikipedia page whether it be wikipedia itself or fandom.com pages, so the library serves to take already established data sets and repurpose them to be more readable.</div>
 
@@ -26,7 +25,7 @@
 <div class="m24"> A lot of the commercial world takes itself to the grave even after its days of publication, although some change is already happening. Commercial preservation that we have never had the opportunity to keep record of until now without overburden of bandwidth consumption is magazines. <a href="https://retromags.com/" target="_blank">Retromags</a> is an organization which preserves old magazines, and very few companies have asked them to not be in possession of their publications. Not just traditional media, but also digital media from the commercial world can benefit from preservational efforts since they are usually what inspires people to become creators in the modern world.</div>
 
 <div class="orbitron">
-        Free for everybody, for real.
+        Free for everybody.
 </div>
 <div class="m24">
         The one way to handle this project is to make it free for everybody, no matter what. There are no added benefits to having an account system, so there will be none. This makes the visit even less restrictive than a physical library, where one needs a card for access. Nothing is needed for access. There are no commercial aspects to the site such as advertisements or sponsorship plugs which cut away from the coziness of the design, and if we can get away with not having donation reminders like Wikipedia, that will be an omission as well.
