--- a/html/solutions.html
+++ b/html/solutions.html
@@ -14,19 +14,27 @@
 <div class="orbitron">
         Presenting data from established structures differently.
 </div>
-<div class="m24">In the case where data is structured under a framework such as Mediawiki, a Table of Contents is created as a user-interface for accessing a curation of pages. A table of contents cannot happen in any live wikipedia page whether it be wikipedia itself or fandom.com pages, so the library serves to take already established datasets and repurpose them to be more accessible. Mediawiki is parsed without any of its original css in mind and is reformatted to be styled with the css of the library.</div>
-
-<div class="orbitron">Use curatorial guidance to provide the most useful information</div>
-<div class="m24">By pruning queries or data in a way which still preserves overall completeness, datasets at the library avoid the meta-data-only problem. For example, people will not miss records of museum objects with no media or any records where media quality is underserved due to copyright policies.</div>
+<div class="m24">In the case where data is structured under a framework such as Mediawiki, a Table of Contents is created as a user-interface for accessing a curation of pages. A table of contents cannot happen in any live wikipedia page whether it be wikipedia itself or fandom.com pages, so the library serves to take already established datasets and repurpose them to be more accessible. Mediawiki is parsed without any of its original css in mind, reformatted to be styled with the css of the library.</div>
 
 <div class="orbitron">
-        Skirt the gray area with grace for preservational progress.
+        Style as the substance.
 </div>
-<div class="m24"> A lot of the commercial world takes itself to the grave even after its days of publication, although some change is already happening. Commercial preservation that we have never had the opportunity to keep record of until now without overburden of bandwidth consumption is magazines. <a href="https://retromags.com/" target="_blank">Retromags</a> is an organization which preserves old magazines, and very few companies have asked them to not be in possession of their publications. Not just traditional media, but also digital media from the commercial world can benefit from preservational efforts since they are usually what inspires people to become creators in the modern world.</div>
+<div class="m24">
+        The library does two things that usually do not go together today, which is be responsive while being graphical with css. The coziness of the site is established with the transparent panels and border lines. It appears to be as science fiction as it can be within the limits of css styles, while also being functionally practical. This manner of style shows that visual personality can certainly be applied to modern layout needs. It is depressing to realize that it is now unusual to represent stylized page layout, which was eclectic by default in the times of print media.
+</div>
+
+<div class="orbitron">Curatorial guidance.</div>
+<div class="m24">By pruning queries or data in a way which still preserves overall completeness, datasets at the library avoid the meta-data-only problem. People will not miss records of museum objects having no media. The same goes for any records where media quality is underserved due to copyright policies.</div>
+
+<div class="orbitron">
+        Gray area is a place for preservational progress.
+</div>
+<div class="m24"> A lot of the commercial world takes itself to the grave even after its days of publication are done, although some change is already happening. Commercial preservation that we have never had the opportunity to keep record of until now without overburden of bandwidth consumption is magazines. <a href="https://retromags.com/" target="_blank">Retromags</a> is an organization which preserves old magazines, and very few companies have asked them to not be in possession of their publications. Not just traditional media, but also digital media from the commercial world can benefit from preservational efforts since they are usually what inspire people to become creators in the modern world.</div>
 
 <div class="orbitron">
         Free for everybody.
 </div>
 <div class="m24">
-        The one way to handle this project is to make it free for everybody, no matter what. There are no added benefits to having an account system, so there will be none. This makes the visit even less restrictive than a physical library, where one needs a card for access. Nothing is needed for access. There are no commercial aspects to the site such as advertisements or sponsorship plugs which cut away from the coziness of the design, and if we can get away with not having donation reminders like Wikipedia, that will be an omission as well.
+        There are no account systems, which allows anybody access to it at any time. This makes the visit less restrictive than a physical library, where one needs a card for access. There are no commercial aspects to the site such as advertisements or sponsorship plugs which cut away from the coziness of the design, and if we can get away with not having donation reminders like Wikipedia, that will be an omission as well.
 </div>
+
