--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <a href="javascript:void(0)" class="nounderline" data="collection">Collection</a>
                         <a href="javascript:void(0)" class="nounderline" data="creator">Creator</a>
                 </div>
-                <div class="flexcolumn" id="contentdata" style="flex:1;  padding:8px;">
+                <div class="flexcolumn table-scroll scrollbar" id="contentdata" style="flex:1;  padding:8px;">
                         Hello
                 </div>
         </div>
