--- a/html/solutions.html
+++ b/html/solutions.html
@@ -2,7 +2,7 @@
 <div class="m24">Sometimes all it takes is to develop things that make little improvements which quietly become a standard. The library is developed in this way while also functioning to solve any problems that it can in the process of collecting, preserving, and presenting data for reference and research. A Quiet solution is more what the library tends to offer, because doing something differently doesn't necessarily solve a problem. It more accurately generates another solution.</div>
 
 <div class="orbitron">Organize the world's information in a way which makes it more immediately accessible to everyone in a cozy environment.</div>
-<div class="m24"> Researchers know more about what is being examined when data is served in meaningful, abundant collections. Having breadth of knowledge in one place differs from going everywhere online in order to get it. It creates a grander sense of focus even when dealing with vast information. When datasets are respecting context and references, it naturally creates a stronger environment for learning. The more data that the library obtains and presents, the more it gets past the problem of people getting data from random sources such as the results achieved from Pinterest browsing.</div>
+<div class="m24">Data retrieved from a growing list of organizations is served in meaningful, abundant collections that each optimized for their own browsing experience. Having breadth of knowledge all in one place creates a sense of focus when presented with lots of information.  Data which respects context and references makes a natural environment for learning. The choice of which datasets to implement are limited only by any distribution rights that need to be respected. As long as data is not from redundant sources, subject matter is open to any datasets which are media-rich, as if everything presented is keeping in mind anyone who is looking for visual or media reference.</div>
 
 <div class="orbitron">
         Presenting data in a way which makes it easier to access all of any corpus.
@@ -14,7 +14,7 @@
 <div class="orbitron">
         Presenting data from established structures differently.
 </div>
-<div class="m24">In the case where data is structured under a framework such as Mediawiki, a Table of Contents is created as a user-interface for accessing a curation of pages. A table of contents cannot happen in any live wikipedia page whether it be wikipedia itself or fandom.com pages, so the library serves to take already established datasets and repurpose them to be more accessible. Mediawiki is parsed without any of its original css in mind, reformatted to be styled with the css of the library.</div>
+<div class="m24">In the case where data is structured under a framework such as Mediawiki, a table-of-contents is created as a user-interface for accessing a curation of pages. An alteration of major layout structure cannot happen in any live wikipedia application whether it be wikipedia itself or fandom.com pages, so the library serves to take already established datasets and repurpose them to be more accessible. Mediawiki is parsed without any of its original css in mind, reformatted to be styled with the css of the library.</div>
 
 <div class="orbitron">
         Style as the substance.
