--- a/html/solutions.html
+++ b/html/solutions.html
@@ -5,10 +5,10 @@
 <div class="m24">Data retrieved from a growing list of organizations is served in meaningful, abundant collections that each optimized for their own browsing experience. Having breadth of knowledge all in one place creates a sense of focus when presented with lots of information.  Data which respects context and references makes a natural environment for learning. The choice of which datasets to implement are limited only by any distribution rights that need to be respected. As long as data is not from redundant sources, subject matter is open to any datasets which are media-rich, as if everything presented is keeping in mind anyone who is looking for visual or media reference.</div>
 
 <div class="orbitron">
-        Presenting data in a way which makes it easier to access all of any corpus.
+        Easier access to all of any data.
 </div>
 <div class="m24 flexcolumn"> 
-        Datasets such as Metropolitan Museum of Art or The Smithsonian each have their own uniquely indexed databases so that the user-interfaces for each implementation can be made to guide the researcher to the desired data while also providing more fluidity for presentation of query results. The page layouts for data results are mapped out in such a way that the most information that can be provided at once is presented, which makes any single query substantial. Since the site is visually stylized with lots of graphical compositions from css, the html feeds on the abundance of data and images in order to draw itself on the screen.
+        Datasets such as Metropolitan Museum of Art or The Smithsonian each have their own uniquely indexed databases so that the user-interfaces for each implementation can be made to guide the researcher to the desired data while also providing more fluidity for presentation of query results. The page layouts for data results are mapped out in such a way that the most information which can be provided at once is presented all at once, which makes any single query substantial. Since the site is visually stylized with lots of graphical compositions from css, the html feeds on the abundance of data and images in order to draw itself on the screen. The readily available information in abundance makes for efficient browsing.
 </div>
 
 <div class="orbitron">
