--- a/html/briefing.html
+++ b/html/briefing.html
@@ -1,1 +1,1 @@
-Briefing
+Internet Public Library is an online establishment for reference and research. It presents abundant and organized information through stylized page design with visual cues taken from science-fiction. Information is retrieved from numerous organizations and counting, from art institutions to fan-made wikis. The data is collected, organized, and represented in formatting that is made most efficient through bespoke layout considerations.
