--- a/html/solutions.html
+++ b/html/solutions.html
@@ -16,6 +16,9 @@
 </div>
 <div class="m24">In the case where data is structured under a framework such as Mediawiki, a table-of-contents is created as a user-interface for accessing a curation of pages. An alteration of major layout structure cannot happen in any live wikipedia application whether it be wikipedia itself or fandom.com pages, so the library serves to take already established datasets and repurpose them to be more accessible. Mediawiki is parsed without any of its original css in mind, reformatted to be styled with the css of the library.</div>
 
+<div class="orbitron">Curatorial guidance.</div>
+<div class="m24">By pruning queries or data in a way which still preserves overall completeness, datasets at the library avoid the meta-data-only problem. People will not miss records of museum objects having no media. The same goes for any records where media quality is underserved due to copyright policies.</div>
+
 <div class="orbitron">
         Style as the substance.
 </div>
@@ -23,13 +26,12 @@
         The library is responsive while being graphical with css. It appears to be science-fiction themed within the limits of css using transparent panels and border lines that are handled with rather acute values. This manner of style shows that visual personality can be applied to modern layout needs through careful consideration. This documentation borrows some of the styles from the library.
 </div>
 
-<div class="orbitron">Curatorial guidance.</div>
-<div class="m24">By pruning queries or data in a way which still preserves overall completeness, datasets at the library avoid the meta-data-only problem. People will not miss records of museum objects having no media. The same goes for any records where media quality is underserved due to copyright policies.</div>
+
 
 <div class="orbitron">
         Free.
 </div>
 <div class="m24">
-        There are no account systems, which allows anybody access to the library. This makes the visit less restrictive than a physical library, where one needs a card for access. There are no commercial aspects to the site such as advertisements or sponsorship plugs which cut away from the coziness of the design, and if we can get away with not having donation reminders like Wikipedia, that will be an omission as well.
+        There are no account systems, which allows anybody access to the library. This makes the visit less restrictive than a physical library, where one needs a card for access. There are no commercial aspects to the site such as advertisements which cut away from the coziness of the design.
 </div>
 
