--- a/html/solutions.html
+++ b/html/solutions.html
@@ -1,5 +1,5 @@
 <div class="orbitron">Quiet solutions and problems.</div>
-<div class="m24">Sometimes all it takes is to develop things that make little improvements which quietly become a standard. The library is developed in this way while also functioning to solve any problems that it can in the process of collecting, preserving, and presenting data for reference and research. A Quiet solution is more what the library tends to offer, because doing something differently doesn't necessarily solve a problem. It more accurately generates another solution.</div>
+<div class="m24"> The library solves any problems that it can in the process of collecting, preserving, and presenting data for reference and research. Quiet solutions are more of what the library tends to lean into. Doing something differently doesn't necessarily solve a problem. It more accurately generates another solution.</div>
 
 <div class="orbitron">Organize the world's information in a way which makes it more immediately accessible to everyone in a cozy environment.</div>
 <div class="m24">Data retrieved from a growing list of organizations is served in meaningful, abundant collections that each optimized for their own browsing experience. Having breadth of knowledge all in one place creates a sense of focus when presented with lots of information.  Data which respects context and references makes a natural environment for learning. The choice of which datasets to implement are limited only by any distribution rights that need to be respected. As long as data is not from redundant sources, subject matter is open to any datasets which are media-rich, as if everything presented is keeping in mind anyone who is looking for visual or media reference.</div>
@@ -27,11 +27,10 @@
 </div>
 
 
-
 <div class="orbitron">
         Free.
 </div>
 <div class="m24">
-        There are no account systems, which allows anybody access to the library. This makes the visit less restrictive than a physical library, where one needs a card for access. There are no commercial aspects to the site such as advertisements which cut away from the coziness of the design.
+        Everyone is eligible for access to the library at any time. There are no accounts related to usage. This makes the visit less restrictive than a physical library where one needs a card for access. There are no commercial aspects to the site such as advertisements which cut away from the coziness of the design, which is one problem that the library is looking to address and not contribute to.
 </div>
 
