--- a/html/briefing.html
+++ b/html/briefing.html
@@ -2,4 +2,8 @@
 <div class="m24">Internet Public Library is an online establishment for reference and research that is free for world to use. It presents abundant and organized information through stylized page design with visual cues taken from science-fiction. Information is retrieved from numerous organizations and counting, ranging anywhere from art institutions to fan-made wikis. The data is collected, organized, and presented in formatting that is made most efficient through bespoke layout considerations per implementation. Each dataset can potentially be very large with millions of records throughout the decades such as those found at The Smithsonian and Nasa.</div>
 
 <div class="orbitron">Subject matter and quality.</div>
-<div class="m24">Datasets that are implemented into the library are limited only by data quality. Subject matter of all kinds are otherwise welcome and scouting for new data happens regularly during development. Quality refers to media-richness, adequate completeness, and reliable data-structure. These 3 pillars make any dataset adequate for implementation.</div>
+<div class="m24">
+        <p>Datasets that are implemented into the library are limited only by data quality. Subject matter of all kinds are otherwise welcome and scouting for new data happens regularly during development. Quality refers to media-richness, adequate completeness, and reliable data-structure. These 3 pillars make any dataset adequate for implementation.</p>
+
+        <p class="mb">The library is meant to have breadth and abundance of knowledge, being an act of stewardship in the process of development and provider of information at grand-scale as a minimum.</p>
+</div>
