--- a/html/collection.html
+++ b/html/collection.html
@@ -1,26 +1,205 @@
-Anilist
-Art Institute of Chicago
-Gobots
-Gunpla
-Giphy
-Gran Turismo
-Louvre
-Project Gutenberg
-Harvard Art Museums
-Hot Wheels
-IGDB
-iNaturalist
-Marvel Database
-Matchbox
-MET Museum of Art
-Music Theory
-Nasa
-Odin Sphere
-Phish.in'
-PoetryDB
-PokéAPi
-Pokémon TCG
-Rebrickable
-Scryfall
-The Smithsonian
-Te Papa
+<table>
+        <tr>
+                <th>Name</th>
+                <th>Purpose</th>
+                <th>Category</th>
+                <th>Data Source</th>
+                <th>Schema/Data</th>
+        </tr>
+        <tr>
+                <td>Anilist</td>
+                <td></td>
+                <td>Media</td>
+                <td><a href="https://docs.anilist.co/" target="_blank">Link</a></td>
+                <td></td>
+        </tr>
+        <tr>
+                <td>Art Institute of Chicago</td>
+                <td></td>
+                <td>Art</td>
+                <td><a href="https://www.artic.edu/open-access/public-api" target="_blank">Link</a></td>
+                <td></td>
+        </tr>
+        <tr>
+                <td>Gobots</td>
+                <td></td>
+                <td>Toys</td>
+                <td>
+                        <a href="https://gbwiki.shoutwiki.com/wiki/Main_Page" target="_blank">Link</a><br>
+                        <a href="https://www.the-liberator.net/" target="_blank">Link</a>
+                </td>
+                <td></td>
+        </tr>
+        <tr>
+                <td>Gunpla</td>
+                <td></td>
+                <td>Toys</td>
+                <td><a href="https://gunpla.fandom.com/wiki/Gunplapedia" target="_blank"></a></td>
+                <td></td>
+        </tr>
+        <tr>
+                <td>Giphy</td>
+                <td></td>
+                <td>Media</td>
+                <td><a href="https://developers.giphy.com/" target="_blank"></a></td>
+                <td></td>
+        </tr>
+        <tr>
+                <td>Gran Turismo</td>
+                <td></td>
+                <td>Games</td>
+                <td><a href="https://gran-turismo.fandom.com/wiki/Gran_Turismo_Wiki" target="blank">Link</a></td>
+                <td></td>
+        </tr>
+        <tr>
+                <td>Louvre</td>
+                <td></td>
+                <td>Art</td>
+                <td><a href="https://collections.louvre.fr/en/page/documentationJSON" target="blank">Link</a></td>
+                <td></td>
+        </tr>
+        <tr>
+                <td>Project Gutenberg</td>
+                <td></td>
+                <td>Literature</td>
+                <td></td>
+                <td></td>
+        </tr>
+        <tr>
+                <td>Harvard Art Museums</td>
+                <td></td>
+                <td>Art</td>
+                <td></td>
+                <td></td>
+        </tr>
+        <tr>
+                <td>Hot Wheels</td>
+                <td></td>
+                <td>Toys</td>
+                <td></td>
+                <td></td>
+        </tr>
+        <tr>
+                <td>IGDB</td>
+                <td></td>
+                <td>Games</td>
+                <td></td>
+                <td></td>
+        </tr>
+        <tr>
+                <td>iNaturalist</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+        </tr>
+        <tr>
+                <td>Marvel Database</td>
+                <td></td>
+                <td>Media</td>
+                <td></td>
+                <td></td>
+        </tr>
+        <tr>
+                <td>Matchbox</td>
+                <td></td>
+                <td>Toys</td>
+                <td></td>
+                <td></td>
+        </tr>
+        <tr>
+                <td>MET Museum of Art</td>
+                <td></td>
+                <td>Art</td>
+                <td></td>
+                <td></td>
+        </tr>
+        <tr>
+                <td>Music Theory</td>
+                <td></td>
+                <td>Music</td>
+                <td></td>
+                <td></td>
+        </tr>
+        <tr>
+                <td>Nasa</td>
+                <td></td>
+                <td>Science</td>
+                <td></td>
+                <td></td>
+        </tr>
+        <tr>
+                <td>Odin Sphere</td>
+                <td></td>
+                <td>Games</td>
+                <td></td>
+                <td></td>
+        </tr>
+        <tr>
+                <td>Phish.in'</td>
+                <td></td>
+                <td>Music</td>
+                <td></td>
+                <td></td>
+        </tr>
+        <tr>
+                <td>PoetryDB</td>
+                <td></td>
+                <td>Literature</td>
+                <td></td>
+                <td></td>
+        </tr>
+        <tr>
+                <td>PokéAPi</td>
+                <td></td>
+                <td>Games</td>
+                <td></td>
+                <td></td>
+        </tr>
+        <tr>
+                <td>Pokémon TCG</td>
+                <td></td>
+                <td>Games</td>
+                <td></td>
+                <td></td>
+        </tr>
+        <tr>
+                <td>Rebrickable</td>
+                <td></td>
+                <td>Toys</td>
+                <td></td>
+                <td></td>
+        </tr>
+        <tr>
+                <td>Scryfall</td>
+                <td></td>
+                <td>Games</td>
+                <td></td>
+                <td></td>
+        </tr>
+        <tr>
+                <td>The Smithsonian</td>
+                <td></td>
+                <td>Heritage</td>
+                <td></td>
+                <td></td>
+        </tr>
+        <tr>
+                <td>Te Papa</td>
+                <td></td>
+                <td>Heritage</td>
+                <td></td>
+                <td></td>
+        </tr>
+</table>
+
+
+
+
+
+
+
+
+
+
+
