--- a/index.html
+++ b/index.html
@@ -30,19 +30,22 @@
 </head>
 <body>
 <div class="nebulabackground"></div>
-<div class="contentbody">
+<div class="contentbody blur">
         <div class="contents">
                 <div class="headerbar"><span class="orbitron">Internet Public Library</span>&nbsp;:: Documentation</div>
         </div>
         <div class="flexrowplain" style="height:100%;">
                 <div class="tocbox flexcolumn">
-                        <a href="javascript:void(0)" class="nounderline" data="briefing">Briefing</a>
-                        <a href="javascript:void(0)" class="nounderline" data="solutions">Solutions</a>
-                        <a href="javascript:void(0)" class="nounderline" data="collection">Collection</a>
-                        <a href="javascript:void(0)" class="nounderline" data="creator">Creator</a>
+                        <div class="orbitron">Table of Contents</div>
+                        <div class="flexcolumn" style="margin:8px;">
+                                <a href="javascript:void(0)" class="nounderline" data="briefing">Briefing</a>
+                                <a href="javascript:void(0)" class="nounderline" data="solutions">Solutions</a>
+                                <a href="javascript:void(0)" class="nounderline" data="collection">Collection</a>
+                                <a href="javascript:void(0)" class="nounderline" data="creator">Creator</a>
+                        </div>
                 </div>
                 <div class="flexcolumn table-scroll scrollbar" id="contentdata" style="flex:1;  padding:8px;">
-                        Hello
+                        Welcome to the documentation of Internet Public Library. Use the Table of Contents to find your way.
                 </div>
         </div>
 </div>
