--- a/html/collection.html
+++ b/html/collection.html
@@ -1,4 +1,4 @@
-<table>
+<table class="generaltable">
         <tr>
                 <th>Name</th>
                 <th>Purpose</th>
@@ -89,7 +89,7 @@
         <tr>
                 <td>iNaturalist</td>
                 <td></td>
-                <td></td>
+                <td>Science</td>
                 <td></td>
                 <td></td>
         </tr>
